Add FUSE3 using cgofuse (#426)
* First pass using fuse3

* Fix builds for Linux

* Try to build seperate fuse2, fuse3 releases for cloudfuse. Fuse3 on Linux is currently broken

* Change build script to build fuse2 or fuse3

* Fix libfuse struct

* Zig compiling fuse3 on Linux amd64

* Fix for fuse3 on Linux amd64

* Add cross compilation for arm64 with fuse3

* Use only fuse2 for builds

* Move to use only fuse3 for Linux

* Cleanup archives for goreleaser

* Cleanup libfuse2 code for windows

* Fix linting and build issues

* Cleanup documentation

* Support fuse2 using build flags

* Use winfsp for fuse3

* Cleanup for merge

* Final cleanup

* GitHub action tests now run on both fuse2 and fuse3

* Fix github actions tests not running on fuse3

* Fix unit tests for fuse3

* Fix build

* Fix issue when building script with fuse2

* Fix builds for fuse2 and lint issues

* Fix code coverage builds for fuse3

* Remove extra build breaking fuse3 builds

* Remove comment around using file-cache-timeout set to 0 with fuse3

--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -17,14 +17,17 @@ jobs:
     strategy:
       matrix:
         go: ["1.23"]
-        job_name: ["linux"]
+        job_name: ["linux-fuse3", "linux-fuse2"]
 
         include:
-          - job_name: linux
+          - job_name: linux-fuse3
+            os: ubuntu-latest
+            containerName: "test-cnt-ubn"
+            fuselib: libfuse3-dev
+          - job_name: linux-fuse2
             os: ubuntu-latest
             containerName: "test-cnt-ubn"
             fuselib: libfuse-dev
-            fuselib2: fuse
 
     runs-on: ${{ matrix.os }}
     env:
@@ -54,8 +57,7 @@ jobs:
 
       - name: Install libfuse
         run: |-
-          sudo apt-get update --fix-missing -o Dpkg::Options::="--force-confnew"
-          sudo apt-get install make cmake gcc g++ parallel ${{ matrix.fuselib }} ${{ matrix.fuselib2 }} -y -o Dpkg::Options::="--force-confnew"
+          sudo apt-get install fuse3 ${{ matrix.fuselib }} -y
 
       - name: Create Directory Structure
         run: |-
@@ -68,7 +70,11 @@ jobs:
 
       - name: Build
         run: |
-          ./build.sh
+          if [ "${{ matrix.job_name }}" == "linux-fuse2" ]; then
+            ./build.sh fuse2
+          else
+            ./build.sh
+          fi
 
       - name: Create Azure Configuration File
         run: |-
@@ -111,10 +117,20 @@ jobs:
           echo "}" >> $cnfFile
 
       - name: UT Code Coverage
-        run: go test -v -timeout=1h ./... --tags=unittest,storagetest -covermode count -coverprofile ./cloudfuse_ut.cov
+        run: |
+          if [ "${{ matrix.job_name }}" == "linux-fuse2" ]; then
+            go test -v -timeout=1h ./... --tags=unittest,storagetest -covermode count -coverprofile ./cloudfuse_ut.cov
+          else
+            go test -v -timeout=1h ./... --tags=unittest,storagetest,fuse3 -covermode count -coverprofile ./cloudfuse_ut.cov
+          fi
 
       - name: Build coverage binary
-        run: go test -coverpkg="./..." -covermode=count -c -o cloudfuse.test
+        run: |
+          if [ "${{ matrix.job_name }}" == "linux-fuse2" ]; then
+            go test -coverpkg="./..." -covermode=count -c -o cloudfuse.test
+          else
+            go test -coverpkg="./..." -tags=fuse3 -covermode=count -c -o cloudfuse.test
+          fi
 
       - name: Create Config File - Block Blob
         env:
@@ -1080,8 +1096,8 @@ jobs:
           - job_name: linux
             os: ubuntu-latest
             containerName: "test-cnt-ubn"
-            fuselib: libfuse-dev
-            fuselib2: fuse
+            fuselib: libfuse3-dev
+            fuselib2: fuse3
 
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
@@ -1100,8 +1116,7 @@ jobs:
 
       - name: Install dependency
         run: |-
-          sudo apt-get update --fix-missing -o Dpkg::Options::="--force-confnew"
-          sudo apt-get install make cmake gcc g++ parallel ${{ matrix.fuselib }} ${{ matrix.fuselib2 }} -y -o Dpkg::Options::="--force-confnew"
+          sudo apt-get install ${{ matrix.fuselib }} ${{ matrix.fuselib2 }}
 
       - name: Cleanup Blob Storage
         run: go test -timeout 120m -v test/accoutcleanup/accountcleanup_test.go
