Only do releases with fuse2 until we bump major version

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -70,7 +70,7 @@ builds:
     flags:
       - -trimpath
       - -buildmode=pie
-      - -tags=fuse3
+      # - -tags=fuse3
     mod_timestamp: "{{ .CommitTimestamp }}"
     ldflags:
       - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }} -L /usr/lib/x86_64-linux-gnu
@@ -104,7 +104,7 @@ builds:
     flags:
       - -trimpath
       - -buildmode=pie
-      - -tags=fuse3
+      # - -tags=fuse3
     mod_timestamp: "{{ .CommitTimestamp }}"
     ldflags:
       - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }}
