--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -27,6 +27,9 @@
 #  10. 'sdk-trace' has been removed and setting log level to log_debug will auto enable these logs.
 # -----------------------------------------------------------------------------------------------------------------------
 
+# for compatibility, include the config version number. The current version is:
+config-version: 1.0.0
+
 # Daemon configuration
 foreground: true|false <run cloudfuse in foreground or background>
 
