Add libc dependency

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -274,6 +274,7 @@ nfpms:
       rpm:
         dependencies:
           - fuse3-devel
+          - libc6 >= 2.24
 
   - id: linux_no_gui
     package_name: cloudfuse
