--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -73,7 +73,7 @@ builds:
     ldflags:
       - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }}
 
-  - id: linux-amd64
+  - id: linux-amd64-fuse3
     goos:
       - linux
     goarch:
@@ -86,7 +86,24 @@ builds:
     flags:
       - -trimpath
       - -buildmode=pie
-      # - -tags=fuse3
+      - -tags=fuse3
+    mod_timestamp: "{{ .CommitTimestamp }}"
+    ldflags:
+      - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }} -L /usr/lib/x86_64-linux-gnu
+
+  - id: linux-amd64-fuse2
+    goos:
+      - linux
+    goarch:
+      - amd64
+    env:
+      - CGO_ENABLED=1
+      - CGO_LDFLAGS=-L/usr/lib/x86_64-linux-gnu
+      - CC=zig cc -target x86_64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu -iwithsysroot /usr/include
+      - CXX=zig c++ -target x86_64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu -iwithsysroot /usr/include
+    flags:
+      - -trimpath
+      - -buildmode=pie
     mod_timestamp: "{{ .CommitTimestamp }}"
     ldflags:
       - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }} -L /usr/lib/x86_64-linux-gnu
@@ -107,7 +124,7 @@ builds:
     ldflags:
       - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }}
 
-  - id: linux-arm64
+  - id: linux-arm64-fuse3
     goos:
       - linux
     goarch:
@@ -120,7 +137,24 @@ builds:
     flags:
       - -trimpath
       - -buildmode=pie
-      # - -tags=fuse3
+      - -tags=fuse3
+    mod_timestamp: "{{ .CommitTimestamp }}"
+    ldflags:
+      - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }}
+
+  - id: linux-arm64-fuse2
+    goos:
+      - linux
+    goarch:
+      - arm64
+    env:
+      - CGO_ENABLED=1
+      - CGO_LDFLAGS=-L/usr/lib/aarch64-linux-gnu
+      - CC=zig cc -target aarch64-linux-gnu -isystem /usr/lib/aarch64-linux-gnu -iwithsysroot /usr/include
+      - CXX=zig c++ -target aarch64-linux-gnu  -isystem /usr/lib/aarch64-linux-gnu -iwithsysroot /usr/include
+    flags:
+      - -trimpath
+      - -buildmode=pie
     mod_timestamp: "{{ .CommitTimestamp }}"
     ldflags:
       - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }}
@@ -146,11 +180,12 @@ checksum:
   algorithm: sha256
 
 archives:
-  - id: linux-amd64
+  - id: linux-amd64-fuse3
     ids:
-      - linux-amd64
+      - linux-amd64-fuse3
       - linux-amd64-health-monitor
     formats: ["tar.gz"]
+    name_template: "{{ .ProjectName }}_fuse3_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     files:
       - LICENSE
       - README.md
@@ -160,11 +195,42 @@ archives:
       - src: sample_configs/*
         dst: ./samples/
 
-  - id: linux-arm64
+  - id: linux-arm64-fuse3
     ids:
-      - linux-arm64
+      - linux-arm64-fuse3
       - linux-arm64-health-monitor
     formats: ["tar.gz"]
+    name_template: "{{ .ProjectName }}_fuse3_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+    files:
+      - LICENSE
+      - README.md
+      - NOTICE
+      - src: setup/baseConfig.yaml
+        dst: ./samples/baseConfig.yaml
+      - src: sample_configs/*
+        dst: ./samples/
+
+  - id: linux-amd64-fuse2
+    ids:
+      - linux-amd64-fuse2
+      - linux-amd64-health-monitor
+    formats: ["tar.gz"]
+    name_template: "{{ .ProjectName }}_fuse2_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+    files:
+      - LICENSE
+      - README.md
+      - NOTICE
+      - src: setup/baseConfig.yaml
+        dst: ./samples/baseConfig.yaml
+      - src: sample_configs/*
+        dst: ./samples/
+
+  - id: linux-arm64-fuse2
+    ids:
+      - linux-arm64-fuse2
+      - linux-arm64-health-monitor
+    formats: ["tar.gz"]
+    name_template: "{{ .ProjectName }}_fuse2_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     files:
       - LICENSE
       - README.md
@@ -195,11 +261,12 @@ release:
     - glob: ./build/Output/cloudfuse_{{.Version}}_windows_amd64.exe
 
 nfpms:
-  - id: linux
+  - id: linux-fuse3
     package_name: cloudfuse
     ids:
-      - linux-amd64
-      - linux-arm64
+      - linux-amd64-fuse3
+      - linux-arm64-fuse3
+    file_name_template: "{{ .ProjectName }}_fuse3_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     vendor: Seagate Technology
     homepage: https://github.com/Seagate/cloudfuse
     maintainer: Seagate Technology <cloudfuse@seagate.com>
@@ -250,12 +317,76 @@ nfpms:
     overrides:
       deb:
         dependencies:
-          - libfuse3-dev
+          - libfuse3-3
           - libc6 (>= 2.24)
 
       rpm:
         dependencies:
-          - fuse3-devel
+          - fuse3
+          - libc6 >= 2.24
+
+  - id: linux-fuse2
+    package_name: cloudfuse
+    ids:
+      - linux-amd64-fuse2
+      - linux-arm64-fuse2
+    file_name_template: "{{ .ProjectName }}_fuse2_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+    vendor: Seagate Technology
+    homepage: https://github.com/Seagate/cloudfuse
+    maintainer: Seagate Technology <cloudfuse@seagate.com>
+    description: |-
+      FUSE file system for interacting with S3 and Azure storage
+      Cloudfuse provides the ability to mount a cloud bucket in your local file
+      system. You can easily read and write to the cloud, and connect programs
+      on your computer to the cloud even if they're not cloud-aware.
+    license: MIT
+    changelog: "changelog.yml"
+    formats:
+      - deb
+      - rpm
+    section: utils
+
+    # Contents to add to the package.
+    # GoReleaser will automatically add the binaries.
+    contents:
+      - src: './dist/linux-{{ .Arch }}-health-monitor_linux_{{ .Arch }}{{- if eq .Arch "amd64" }}_{{ .Amd64 }}{{- else }}_{{ .Arm64 }}{{ end }}/cfusemon'
+        dst: /usr/bin/cfusemon
+        file_info:
+          mode: 0755
+      - src: NOTICE
+        dst: /usr/share/doc/cloudfuse/NOTICE
+        file_info:
+          mode: 0644
+      - src: LICENSE
+        dst: /usr/share/doc/cloudfuse/LICENSE
+        file_info:
+          mode: 0644
+      - src: copyright
+        dst: /usr/share/doc/cloudfuse/copyright
+        file_info:
+          mode: 0644
+      - src: setup/baseConfig.yaml
+        dst: /usr/share/doc/cloudfuse/examples/baseConfig.yaml
+        file_info:
+          mode: 0644
+      - src: sample_configs/*
+        dst: /usr/share/doc/cloudfuse/examples/
+        file_info:
+          mode: 0644
+      - src: ./manpages/*
+        dst: /usr/share/man/man1/
+        file_info:
+          mode: 0644
+
+    overrides:
+      deb:
+        dependencies:
+          - libfuse2
+          - libc6 (>= 2.24)
+
+      rpm:
+        dependencies:
+          - fuse
           - libc6 >= 2.24
 
 metadata:
