--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -38,7 +38,7 @@ restricted-characters-windows: true|false <allows filenames with restricted char
 
 # Logger configuration
 logging:
-  type: syslog|silent|base <type of logger to be used by the system. silent = no logger, base = file based logger. Default - syslog>
+  type: syslog|silent|base <type of logger to be used by the system. silent = no logger, base = file based logger. Default - base>
   level: log_off|log_crit|log_err|log_warning|log_info|log_trace|log_debug <log level. Default - log_warning>
   file-path: <path where log files shall be stored. Default - '$HOME/.cloudfuse/cloudfuse.log'>
   max-file-size-mb: <maximum allowed size for each log file (in MB). Default - 512 MB>
@@ -69,7 +69,7 @@ libfuse:
   max-fuse-threads: <number of threads allowed at libfuse layer for highly parallel operations, Default is 128>
   direct-io: true|false <enable to bypass the kernel cache>
   network-share: true|false <runs as a network share. may improve performance when latency to cloud is high. only supported on Windows. Known issue - only one Cloudfuse network share can be mounted at a time>
-  display-capacity-mb: <number of MB to display as the mounted storage capacity. Default - 1TB (1048576 MB)>
+  display-capacity-mb: <number of MB to display as the mounted storage capacity. Default - 1PB (1073741824 MB)>
   windows-sddl: <windows file security and permissions setting in SDDL syntax. Default - D:P(A;;FA;;;WD) corresponding to every user having read/write access>
 
   # Streaming configuration
@@ -97,7 +97,7 @@ file_cache:
   path: <path to local disk cache>
 
   # Optional
-  timeout-sec: <default cache eviction timeout (in sec). Default - 120 sec>
+  timeout-sec: <default cache eviction timeout (in sec). Default - 216000 sec>
   max-eviction: <number of files that can be evicted at once. Default - 5000>
   max-size-mb: <maximum cache size allowed. Default - 80% of free disk space>
   high-threshold: <% disk space consumed which triggers eviction. This parameter overrides 'timeout-sec' parameter and cached files will be removed even if they have not expired. Default - 80>
