--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -233,7 +233,11 @@ jobs:
           S3_KEY_ID: "${{ secrets.S3TEST_ACCESS_KEY }}"
           S3_REGION: "${{ secrets.S3TEST_REGION }}"
           S3_SECRET_KEY: "${{ secrets.S3TEST_SECRET_KEY }}"
-        run: "./cloudfuse.test gen-test-config --config-file=s3_key.yaml --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}"
+        run: |-
+          RANDOM_NUMBERS=$(head /dev/urandom | tr -dc '0-9' | head -c 8)
+          COMBINED_STRING="test${RANDOM_NUMBERS}"
+          echo "S3_SUBDIRECTORY=${COMBINED_STRING}" >> $GITHUB_ENV
+          ./cloudfuse.test gen-test-config --config-file=s3_key.yaml --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}
 
       - name: S3 Coverage
         run: |-
@@ -270,15 +274,6 @@ jobs:
           sudo fusermount -u ${{ env.MOUNT_DIR }}
           sleep 5
 
-      - name: Cleanup S3 Storage before size tracker test
-        run: go test -timeout 120m -v test/s3cleanup/s3cleanup_test.go
-        env:
-          AWS_ACCESS_KEY_ID: "${{ secrets.S3TEST_ACCESS_KEY }}"
-          AWS_SECRET_ACCESS_KEY: "${{ secrets.S3TEST_SECRET_KEY }}"
-          AWS_REGION: "${{ secrets.S3TEST_REGION }}"
-          S3_BUCKET_NAME: "${{ secrets.S3TEST_BUCKET_NAME }}"
-          S3_ENDPOINT: "${{ secrets.S3TEST_ENDPOINT }}"
-
       - name: Create Config File - S3 with Size Tracker
         env:
           S3_BUCKET_NAME: "${{ secrets.S3TEST_BUCKET_NAME }}"
@@ -286,7 +281,12 @@ jobs:
           S3_KEY_ID: "${{ secrets.S3TEST_ACCESS_KEY }}"
           S3_REGION: "${{ secrets.S3TEST_REGION }}"
           S3_SECRET_KEY: "${{ secrets.S3TEST_SECRET_KEY }}"
-        run: "./cloudfuse.test gen-test-config --config-file=s3_key_size_tracker.yaml --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}"
+          S3_SUBDIRECTORY: 
+        run: |-
+          RANDOM_NUMBERS=$(head /dev/urandom | tr -dc '0-9' | head -c 8)
+          COMBINED_STRING="test${RANDOM_NUMBERS}"
+          echo "S3_SUBDIRECTORY=${COMBINED_STRING}" >> $GITHUB_ENV
+          ./cloudfuse.test gen-test-config --config-file=s3_key_size_tracker.yaml --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}
 
       - name: S3 Coverage with Size Tracker
         run: |-
@@ -782,6 +782,13 @@ jobs:
           kill $pid
           sleep 5
 
+      - name: Generate S3 Test Subdirectory
+        shell: bash
+        run: |
+          $RANDOM_NUMBERS=$(head /dev/urandom | tr -dc '0-9' | head -c 8)
+          COMBINED_STRING="test${RANDOM_NUMBERS}"
+          echo "S3_SUBDIRECTORY=${COMBINED_STRING}" >> $GITHUB_ENV
+
       - name: Create Config File - S3
         shell: bash
         env:
@@ -790,7 +797,14 @@ jobs:
           S3_KEY_ID: "${{ secrets.S3TEST_ACCESS_KEY }}"
           S3_REGION: "${{ secrets.S3TEST_REGION }}"
           S3_SECRET_KEY: "${{ secrets.S3TEST_SECRET_KEY }}"
-        run: "./cloudfuse.test gen-test-config --config-file=s3_key.yaml --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}"
+        run: |-
+          RANDOM_NUMBERS=""
+          for i in {1..8}; do
+            RANDOM_NUMBERS+=$(( RANDOM % 10 ))
+          done
+          COMBINED_STRING="test${RANDOM_NUMBERS}"
+          echo "S3_SUBDIRECTORY=${COMBINED_STRING}" >> $GITHUB_ENV
+          ./cloudfuse.test gen-test-config --config-file=s3_key.yaml --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}
 
       - name: S3 Coverage
         shell: bash
@@ -829,15 +843,6 @@ jobs:
           kill $pid
           sleep 5
 
-      - name: Cleanup S3 Storage before size tracker test
-        run: go test -timeout 120m -v test/s3cleanup/s3cleanup_test.go
-        env:
-          AWS_ACCESS_KEY_ID: "${{ secrets.S3TEST_ACCESS_KEY }}"
-          AWS_SECRET_ACCESS_KEY: "${{ secrets.S3TEST_SECRET_KEY }}"
-          AWS_REGION: "${{ secrets.S3TEST_REGION }}"
-          S3_BUCKET_NAME: "${{ secrets.S3TEST_BUCKET_NAME }}"
-          S3_ENDPOINT: "${{ secrets.S3TEST_ENDPOINT }}"
-
       - name: Create Config File - S3 with Size Tracker
         shell: bash
         env:
@@ -846,7 +851,14 @@ jobs:
           S3_KEY_ID: "${{ secrets.S3TEST_ACCESS_KEY }}"
           S3_REGION: "${{ secrets.S3TEST_REGION }}"
           S3_SECRET_KEY: "${{ secrets.S3TEST_SECRET_KEY }}"
-        run: "./cloudfuse.test gen-test-config --config-file=s3_key_size_tracker.yaml --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}"
+        run: |-
+          RANDOM_NUMBERS=""
+          for i in {1..8}; do
+            RANDOM_NUMBERS+=$(( RANDOM % 10 ))
+          done
+          COMBINED_STRING="test${RANDOM_NUMBERS}"
+          echo "S3_SUBDIRECTORY=${COMBINED_STRING}" >> $GITHUB_ENV
+          ./cloudfuse.test gen-test-config --config-file=s3_key_size_tracker.yaml --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}
 
       - name: S3 Coverage with Size Tracker
         shell: bash
