--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -236,7 +236,9 @@ jobs:
         run: |-
           RANDOM_NUMBERS=$(head /dev/urandom | tr -dc '0-9' | head -c 8)
           COMBINED_STRING="test${RANDOM_NUMBERS}"
+          echo $S3_SUBDIRECTORY
           echo "S3_SUBDIRECTORY=${COMBINED_STRING}" >> $GITHUB_ENV
+          export $S3_SUBDIRECTORY
           ./cloudfuse.test gen-test-config --config-file=s3_key.yaml --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}
 
       - name: S3 Coverage
@@ -285,7 +287,9 @@ jobs:
         run: |-
           RANDOM_NUMBERS=$(head /dev/urandom | tr -dc '0-9' | head -c 8)
           COMBINED_STRING="test${RANDOM_NUMBERS}"
+          echo $S3_SUBDIRECTORY
           echo "S3_SUBDIRECTORY=${COMBINED_STRING}" >> $GITHUB_ENV
+          export $S3_SUBDIRECTORY
           ./cloudfuse.test gen-test-config --config-file=s3_key_size_tracker.yaml --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}
 
       - name: S3 Coverage with Size Tracker
@@ -782,13 +786,6 @@ jobs:
           kill $pid
           sleep 5
 
-      - name: Generate S3 Test Subdirectory
-        shell: bash
-        run: |
-          $RANDOM_NUMBERS=$(head /dev/urandom | tr -dc '0-9' | head -c 8)
-          COMBINED_STRING="test${RANDOM_NUMBERS}"
-          echo "S3_SUBDIRECTORY=${COMBINED_STRING}" >> $GITHUB_ENV
-
       - name: Create Config File - S3
         shell: bash
         env:
@@ -804,6 +801,8 @@ jobs:
           done
           COMBINED_STRING="test${RANDOM_NUMBERS}"
           echo "S3_SUBDIRECTORY=${COMBINED_STRING}" >> $GITHUB_ENV
+          echo $S3_SUBDIRECTORY
+          export $S3_SUBDIRECTORY
           ./cloudfuse.test gen-test-config --config-file=s3_key.yaml --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}
 
       - name: S3 Coverage
@@ -858,6 +857,8 @@ jobs:
           done
           COMBINED_STRING="test${RANDOM_NUMBERS}"
           echo "S3_SUBDIRECTORY=${COMBINED_STRING}" >> $GITHUB_ENV
+          echo $S3_SUBDIRECTORY
+          export $S3_SUBDIRECTORY
           ./cloudfuse.test gen-test-config --config-file=s3_key_size_tracker.yaml --temp-path=${{ env.TEMP_DIR }} --output-file=${{ env.cloudfuse_CFG }}
 
       - name: S3 Coverage with Size Tracker
